# CTF-collection

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
00-start-here/: README.md  learning-path.md  recommended-repos.md  tools-cheatsheet.md
01-pwn/: README.md
02-web/: README.md
03-crypto/: README.md
04-reverse-engineering/: README.md
05-forensics/: README.md
06-osint/: README.md
07-misc/: README.md
08-blockchain-web3/: README.md
09-mobile/: README.md
10-hardware-iot/: README.md
11-ics-scada/: README.md
12-cloud/: README.md
13-network-pcap/: README.md
20-events/: 0ctf-tctf.md  README.md  angstromctf.md  bamboofox-ctf.md  capture-the-ether.md  corctf.md  csaw-ctf.md  damn-vulnerable-defi.md  def-con-ctf-quals.md  def-con-ctf.md  dicectf.md  downunderctf.md  ethernaut.md  google-ctf.md  hackthebox.md  hitcon-ctf.md  hxp-ctf.md  idekctf.md  irisctf.md  justctf.md  nahamcon-ctf.md  paradigm-ctf.md  picoctf.md  plaidctf.md  pwn-college.md  realworldctf.md  seccon-ctf.md  sekaictf.md  tryhackme.md  uiuctf.md  utctf.md
30-archetypes/: README.md  aggregators.md  awesome-lists.md  event-organizer-sources.md  personal-collections.md  practice-platforms.md  team-archives.md  toolkits.md
40-tooling/: README.md  blockchain-tools.md  crypto-tools.md  forensics-tools.md  mobile-tools.md  pwn-tools.md  rev-tools.md  web-tools.md
99-appendix/: faq.md  (+3 more)
repos/nautilus-institute/finals-2025/attestedfun/server/: Cargo.toml  start_in_docker.sh
repos/nautilus-institute/finals-2025/attestedfun/server/mmacro_derive/: Cargo.toml
(+5086 files in other folders)
