[package]
name = "attestedfun"
version = "0.1.0"
edition = "2021"

[dependencies]
simple_asn1 = "0.6"
ring = "0.17.5"
num-traits = "0.2"
base64 = "0.22"
num-bigint = "0.4"
hex = "0.4"
openssl = "0.10"
once_cell = "1.19"
hmac = "0.12"
sha2 = "0.10"
mmacro_derive = { path = "mmacro_derive" }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8"            
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
rand = "0.8"
aes          = "0.7"
block-modes  = "0.8"
block-padding= "0.3"
serde_cbor = "0.11"
x509-parser = "0.17"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

